# dandori

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dandori-delivery-plan-v0.2.md  dandori-hld-v0.2.md  dandori-hld-v0.3-rust.md  dandori-hld-v0.3.1-rust-profiled.md  deny.toml  justfile  lefthook.yml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.sqlx/: README.md  query-06a83de3a36b21a8331e46d4c3ed0ed548655a23cc3f56a3800ee9edea0f2e03.json  query-06e59fc2a64ae535a633f50991c125653090b5e89362a7a7d68b2e578569e3b0.json  query-1030ce69e6584e7adb99e9227af2a2239e768e088fa71f9b998aac4b8957d05f.json  query-1ad8b6c54431c0698478c74b9578cc9c0d2dbda093093ba1ae64e6fb58112443.json  query-1e6460b22267987f37f64289112248a81a14ed74f8d34a6a5aa1a1c0da9d85d6.json  query-20c521d3030c58fa73885a7c980853ec5b646741d53692151974510427890b8b.json  query-20dd75674fa5060d7390188ff9ffdfcab99c6cfa227c4b42bd99db45fb1be18f.json  query-21f48743d775eba45d0831d58fb252b0859fae4c5836fa9f020fc4cc1ab29215.json  query-36db60a491a456496c9558baff31d7c1a9764387782f86fbe6d31458b0590d14.json  query-36e8fe98652a0ac43ebe2c37e81703dc6ad57767805e378988de2ab3a6a17039.json  query-48fc3709282469dd52e708c3a9953e4b9216251af1f791b20d60c974f6d16aa4.json  query-57adf141cad281d2ddfb655eeccec0c82470dae9794fc9c766eaecfdca1fb62d.json  query-7cfdb2b3e11a6e952b4e8311ed0c380f6fccec55865c04fe54ee3da5a4eb19b0.json  query-83f0314744391c89ddc903f2e8e2d25470199ce74074d93641e1fdcc04ecdd8c.json  query-8d9c0fed0d869b29620ed4866dbc59515ff697dd8b30bf7ef259e5cd8ff5af66.json  query-95bf2b7ea0bb6c740a271d691a85d877692f13249bdec09f0c127da04eaa0957.json  query-a5edf2a71ad0b5e1a17f0b5338ad834a81fabe7721c1868b18868a6a0beb2140.json  query-acb2a51d859cff012ad29458e19a031c21b4d87d5f0dc631829952795f35846c.json  query-bc6705e7cba098d4f34bad7c1bf6e164a3f2e74ac3631e55fd686c1f89da3b8c.json  query-cfcd4d76dac27941ebcc9f577acceacd46e2deb95270ccd8c8759ecb22a87b9f.json  query-ecaf6f341caf21451dbae33f750510a9966030e80145961ef58538efb1fbd8e3.json  query-fe26953c2b189d1031e421cf608bc6648bf0a54a4b2894ee94af19aac79d9c01.json
crates/dandori-app-services/: Cargo.toml
crates/dandori-app-services/src/: adapters.rs  lib.rs  service.rs  worker.rs
crates/dandori-app-services/src/worker/: config.rs  mod.rs  publish.rs  registry.rs  service.rs
crates/dandori-app-services/tests/: phase1_parity.rs  phase1_perf_gate.rs  phase1_worker_chaos.rs  worker_outbox.rs
crates/dandori-app-services/tests/support/: worker_publishers.rs
crates/dandori-auth/: Cargo.toml
crates/dandori-auth/src/: algorithms.rs  lib.rs  tests.rs
crates/dandori-contract/: Cargo.toml
crates/dandori-contract/src/: lib.rs
crates/dandori-domain/: Cargo.toml
crates/dandori-domain/src/: auth.rs  command.rs  error.rs  event.rs  ids.rs  lib.rs  model.rs
crates/dandori-graph/: Cargo.toml
crates/dandori-graph/src/: lib.rs
crates/dandori-observability/: Cargo.toml
crates/dandori-observability/src/: correlation.rs  lib.rs  metrics.rs
crates/dandori-orchestrator/: Cargo.toml
crates/dandori-orchestrator/src/: lib.rs
crates/dandori-policy/: Cargo.toml
crates/dandori-policy/src/: lib.rs
crates/dandori-store/: Cargo.toml
crates/dandori-store/src/: entities.rs  lib.rs  migration.rs  migration_sql.rs  pg_store.rs
crates/dandori-store/src/repositories/: common.rs  issue.rs  mod.rs  outbox.rs  partition.rs  project.rs  workspace.rs
crates/dandori-store/tests/: phase1_idempotency_concurrency.rs  phase1_partition_lease.rs  phase1_perf_gate.rs  phase1_store_core.rs  phase1_store_fault_injection.rs  phase1_store_integration.rs  phase1_store_outbox.rs
crates/dandori-store/tests/support/: mod.rs
crates/dandori-sync-github/: Cargo.toml
crates/dandori-sync-github/src/: lib.rs
crates/dandori-test-support/: Cargo.toml
crates/dandori-test-support/src/: lib.rs
crates/dandori-workflow/: Cargo.toml
crates/dandori-workflow/src/: lib.rs
docs/: bootstrap-playbook.md  phase-1-project-brief.md
docs/adr/: ADR-0001-rust-architecture-and-workspace-topology.md  ADR-0002-contract-first-rest-mcp-parity.md  ADR-0003-event-first-write-path-with-transactional-outbox.md  ADR-0004-multitenancy-with-postgres-rls-from-migration-1.md  ADR-0005-workflow-and-dependency-graph-semantics.md  ADR-0006-github-bidirectional-sync-and-conflict-state-machine.md  ADR-0007-seaorm-first-persistence-with-sqlx-escape-hatches.md  ADR-0008-security-baseline-and-least-privilege.md  ADR-0009-single-required-quality-gate-via-just-ci.md  ADR-0010-three-tier-test-policy-with-nextest.md  README.md  _template.md
frontend/: README.md
