[package]
name = "dandori-app-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
dandori-contract = { path = "../dandori-contract", version = "0.1.0" }
dandori-domain = { path = "../dandori-domain", version = "0.1.0" }
dandori-store = { path = "../dandori-store", version = "0.1.0" }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
