[package]
name = "dandori-app-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dandori-contract = { path = "../dandori-contract", version = "0.1.0" }
dandori-domain = { path = "../dandori-domain", version = "0.1.0" }
dandori-observability = { path = "../dandori-observability", version = "0.1.0" }
dandori-policy = { path = "../dandori-policy", version = "0.1.0" }
dandori-store = { path = "../dandori-store", version = "0.1.0" }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dandori-test-support = { path = "../dandori-test-support", version = "0.1.0" }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
