[package]
name = "dandori-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
