[package]
name = "dandori-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
dandori-domain = { path = "../dandori-domain", version = "0.1.0" }
dandori-observability = { path = "../dandori-observability", version = "0.1.0" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dandori-test-support = { path = "../dandori-test-support", version = "0.1.0" }
futures = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
