[package]
name = "dandori-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dandori-app-services = { path = "../dandori-app-services", version = "0.1.0" }
dandori-domain = { path = "../dandori-domain", version = "0.1.0" }
dandori-store = { path = "../dandori-store", version = "0.1.0" }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
